variables.Variables.scala.error
Compilation error:
Variables:6: error: '<-' expected but ')' found.
for (i<pas) backward() 
          ^Variables:8: error: illegal start of simple expression
	}
        ^